test/corpus/tags.txt
================================================================================
Tags
================================================================================

{tag}
{tag null attr=null flag}

--------------------------------------------------------------------------------

(template
  (tag
    (tag_function
      (tag_function_name)))
  (tag
    (tag_function
      (tag_function_name)
      (tag_function_attributes
        (tag_function_attribute
          value: (null))
        (tag_function_attribute
          name: (identifier)
          value: (null))
        (tag_function_attribute
          name: (identifier)))))
  (text))

================================================================================
Blocks
================================================================================

{block}
  This is a block with some text and a {tag}
{/block}

--------------------------------------------------------------------------------

(template
  (block
    (start_tag
      (tag_function
          (tag_function_name)))
    (body
      (text)
      (tag
        (tag_function
            (tag_function_name))))
    (end_tag
      (tag_function_name)))
  (text))

================================================================================
Comments
================================================================================

{* Comment *}
{* A comment can contain any * {char}! *}

--------------------------------------------------------------------------------

(template
  (comment)
  (comment)
  (text))

================================================================================
{if},{elseif},{else}
================================================================================

{if true}
    {if true}
        body
    {/if}
{else if true}
    {if true}
        body
    {/if}
{else}
    {if true}
        body
    {/if}
{/if}

--------------------------------------------------------------------------------

(template
  (if_block
    (if_start_tag
      condition: (boolean))
    (body
      (if_block
        (if_start_tag
          condition: (boolean))
        (body
          (text))
        (if_end_tag)))
      (elseif_tag
        condition: (boolean))
    (body
      (if_block
        (if_start_tag
          condition: (boolean))
        (body
          (text))
        (if_end_tag)))
    (else_tag)
    (body
      (if_block
        (if_start_tag
          condition: (boolean))
        (body
          (text))
        (if_end_tag)))
    (if_end_tag))
  (text))

================================================================================
{for},{forelse}
================================================================================

{for $i = 1 to 10}
    {for $j = $start to $end 2 max=2}
        body
    {forelse}
        body
    {/for}
{/for}

--------------------------------------------------------------------------------

(template
  (for_block
    (for_start_tag
      start: (assignment_expression
        left: (variable
          (identifier))
        right: (number))
      end: (number))
    (body
      (for_block
        (for_start_tag
          start: (assignment_expression
            left: (variable
              (identifier))
            right: (variable
              (identifier)))
          end: (variable
            (identifier))
          step: (number)
          (tag_function_attributes
            (tag_function_attribute
              name: (identifier)
              value: (number))))
        (body
          (text))
        (forelse_tag)
        (body
          (text))
        (for_end_tag)))
    (for_end_tag))
  (text))

================================================================================
{foreach},{foreachelse}
================================================================================

{foreach $list as $key => $item}
    {foreach from=$list key='key' item='item'}
        body
    {foreachelse}
        body
    {/foreach}
{/foreach}

{foreach $list as $key}
    body
{/foreach}

--------------------------------------------------------------------------------

(template
  (foreach_block
    (foreach_start_tag
      from: (variable
        (identifier))
      key: (variable
        (identifier))
      item: (variable
        (identifier)))
    (body
      (foreach_block
        (foreach_start_tag
          (tag_function_attributes
            (tag_function_attribute
              name: (identifier)
              value: (variable
                (identifier)))
            (tag_function_attribute
              name: (identifier)
              value: (string
                (string_content)))
            (tag_function_attribute
              name: (identifier)
              value: (string
                (string_content)))))
        (body
          (text))
        (foreachelse_tag)
        (body
          (text))
        (foreach_end_tag)))
    (foreach_end_tag))
  (foreach_block
    (foreach_start_tag
      from: (variable
        (identifier))
      item: (variable
        (identifier)))
    (body
      (text))
    (foreach_end_tag))
  (text))
